gen/include/notcurses/notcurses.h

struct notcurses; 
struct ncplane;   
typedef enum {
  NCBLIT_DEFAULT, 
  NCBLIT_1x1,     
  NCBLIT_2x1,     
  NCBLIT_2x2,     
  NCBLIT_3x2,     
  NCBLIT_BRAILLE, 
  NCBLIT_PIXEL,   
  NCBLIT_4x1,     
  NCBLIT_8x1,     
} ncblitter_e;
typedef enum {
  NCSCALE_NONE,
  NCSCALE_SCALE,
  NCSCALE_STRETCH,
  NCSCALE_NONE_HIRES,
  NCSCALE_SCALE_HIRES,
} ncscale_e;
typedef enum {
  NCLOGLEVEL_SILENT = -1,
  NCLOGLEVEL_PANIC = 0,  
  NCLOGLEVEL_FATAL = 1,  
  NCLOGLEVEL_ERROR = 2,  
  NCLOGLEVEL_WARNING = 3,
  NCLOGLEVEL_INFO = 4,   
  NCLOGLEVEL_VERBOSE = 5,
  NCLOGLEVEL_DEBUG = 6,  
  NCLOGLEVEL_TRACE = 7,  
} ncloglevel_e;
typedef struct notcurses_options {
  const char* termtype;
  ncloglevel_e loglevel;
  unsigned margin_t, margin_r, margin_b, margin_l;
  uint64_t flags;
} notcurses_options;
API int notcurses_lex_margins(const char* op, notcurses_options* opts)
  __attribute__ ((nonnull (1)));
API int notcurses_lex_blitter(const char* op, ncblitter_e* blitter)
  __attribute__ ((nonnull (1)));
API const char* notcurses_str_blitter(ncblitter_e blitter);
API int notcurses_lex_scalemode(const char* op, ncscale_e* scalemode)
  __attribute__ ((nonnull (1)));
API const char* notcurses_str_scalemode(ncscale_e scalemode);
API ALLOC struct notcurses* notcurses_init(const notcurses_options* opts, FILE* fp);
API ALLOC struct notcurses* notcurses_core_init(const notcurses_options* opts, FILE* fp);
API int notcurses_stop(struct notcurses* nc);
API int notcurses_enter_alternate_screen(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API int notcurses_leave_alternate_screen(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API struct ncplane* notcurses_stdplane(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API const struct ncplane* notcurses_stdplane_const(const struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncpile_top(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncpile_bottom(struct ncplane* n)
  __attribute__ ((nonnull (1)));
static inline struct ncplane*
notcurses_top(struct notcurses* n){
  return ncpile_top(notcurses_stdplane(n));
}
static inline struct ncplane*
notcurses_bottom(struct notcurses* n){
  return ncpile_bottom(notcurses_stdplane(n));
}
API int ncpile_render(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API int ncpile_rasterize(struct ncplane* n)
  __attribute__ ((nonnull (1)));
static inline int
notcurses_render(struct notcurses* nc){
  struct ncplane* stdn = notcurses_stdplane(nc);
  if(ncpile_render(stdn)){
    return -1;
  }
  return ncpile_rasterize(stdn);
}
API int ncpile_render_to_buffer(struct ncplane* p, char** buf, size_t* buflen)
  __attribute__ ((nonnull (1, 2, 3)));
API int ncpile_render_to_file(struct ncplane* p, FILE* fp)
  __attribute__ ((nonnull (1, 2)));
API void notcurses_drop_planes(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
static inline bool
nckey_mouse_p(uint32_t r){
  return r >= NCKEY_MOTION && r <= NCKEY_BUTTON11;
}
typedef struct ncinput {
  uint32_t id;       
  int y, x;          
  char utf8[5];      
  bool alt;          
  bool shift;        
  bool ctrl;         
  enum {
    NCTYPE_UNKNOWN,
    NCTYPE_PRESS,
    NCTYPE_REPEAT,
    NCTYPE_RELEASE,
  } evtype;
  int ypx, xpx;      
} ncinput;
static inline bool
ncinput_equal_p(const ncinput* n1, const ncinput* n2){
  if(n1->id != n2->id){
    return false;
  }
  if(n1->y != n2->y || n1->x != n2->x){
    return false;
  }
  if(n1->alt != n2->alt || n1->shift != n2->shift || n1->ctrl != n2->ctrl){
    return false;
  }
  if(n1->evtype != n2->evtype){
    return false;
  }
  return true;
}
API uint32_t notcurses_get(struct notcurses* n, const struct timespec* ts,
                           ncinput* ni)
  __attribute__ ((nonnull (1)));
API int notcurses_getvec(struct notcurses* n, const struct timespec* ts,
                         ncinput* ni, int vcount)
  __attribute__ ((nonnull (1, 3)));
API int notcurses_inputready_fd(struct notcurses* n)
  __attribute__ ((nonnull (1)));
static inline uint32_t
notcurses_get_nblock(struct notcurses* n, ncinput* ni){
  struct timespec ts = { .tv_sec = 0, .tv_nsec = 0 };
  return notcurses_get(n, &ts, ni);
}
static inline uint32_t
notcurses_get_blocking(struct notcurses* n, ncinput* ni){
  return notcurses_get(n, NULL, ni);
}
static inline bool
ncinput_nomod_p(const ncinput* ni){
  return !(ni->alt | ni->ctrl | ni->shift);
}
API int notcurses_mice_enable(struct notcurses* n, unsigned eventmask)
  __attribute__ ((nonnull (1)));
__attribute__ ((nonnull (1))) static inline int
notcurses_mice_disable(struct notcurses* n){
  return notcurses_mice_enable(n, NCMICE_NO_EVENTS);
}
API int notcurses_linesigs_disable(struct notcurses* n)
  __attribute__ ((nonnull (1)));
API int notcurses_linesigs_enable(struct notcurses* n)
  __attribute__ ((nonnull (1)));
API int notcurses_refresh(struct notcurses* n, unsigned* RESTRICT y, unsigned* RESTRICT x)
  __attribute__ ((nonnull (1)));
API struct notcurses* ncplane_notcurses(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API const struct notcurses* ncplane_notcurses_const(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API void ncplane_dim_yx(const struct ncplane* n, unsigned* RESTRICT y, unsigned* RESTRICT x)
  __attribute__ ((nonnull (1)));
API struct ncplane* notcurses_stdplane(struct notcurses* nc);
API const struct ncplane* notcurses_stdplane_const(const struct notcurses* nc);
static inline struct ncplane*
notcurses_stddim_yx(struct notcurses* nc, unsigned* RESTRICT y, unsigned* RESTRICT x){
  struct ncplane* s = notcurses_stdplane(nc); 
  ncplane_dim_yx(s, y, x); 
  return s;
}
static inline const struct ncplane*
notcurses_stddim_yx_const(const struct notcurses* nc, unsigned* RESTRICT y, unsigned* RESTRICT x){
  const struct ncplane* s = notcurses_stdplane_const(nc); 
  ncplane_dim_yx(s, y, x); 
  return s;
}
static inline unsigned
ncplane_dim_y(const struct ncplane* n){
  unsigned dimy;
  ncplane_dim_yx(n, &dimy, NULL);
  return dimy;
}
static inline unsigned
ncplane_dim_x(const struct ncplane* n){
  unsigned dimx;
  ncplane_dim_yx(n, NULL, &dimx);
  return dimx;
}
API void ncplane_pixel_geom(const struct ncplane* n,
                           unsigned* RESTRICT pxy, unsigned* RESTRICT pxx,
                           unsigned* RESTRICT celldimy, unsigned* RESTRICT celldimx,
                           unsigned* RESTRICT maxbmapy, unsigned* RESTRICT maxbmapx)
  __attribute__ ((nonnull (1)));
static inline void
notcurses_term_dim_yx(const struct notcurses* n, unsigned* RESTRICT rows, unsigned* RESTRICT cols){
  ncplane_dim_yx(notcurses_stdplane_const(n), rows, cols);
}
API char* notcurses_at_yx(struct notcurses* nc, unsigned yoff, unsigned xoff,
                          uint16_t* stylemask, uint64_t* channels)
  __attribute__ ((nonnull (1)));
typedef struct ncplane_options {
  int y;            
  int x;            
  unsigned rows;    
  unsigned cols;    
  void* userptr;    
  const char* name; 
  int (*resizecb)(struct ncplane*); 
  uint64_t flags;   
  unsigned margin_b, margin_r; 
} ncplane_options;
API ALLOC struct ncplane* ncplane_create(struct ncplane* n, const ncplane_options* nopts)
  __attribute__ ((nonnull (1, 2)));
API ALLOC struct ncplane* ncpile_create(struct notcurses* nc, const ncplane_options* nopts)
  __attribute__ ((nonnull (1, 2)));
API int ncplane_resize_maximize(struct ncplane* n);
API int ncplane_resize_marginalized(struct ncplane* n);
API int ncplane_resize_realign(struct ncplane* n);
API int ncplane_resize_placewithin(struct ncplane* n);
API void ncplane_set_resizecb(struct ncplane* n, int(*resizecb)(struct ncplane*));
API int ncplane_set_name(struct ncplane* n, const char* name)
  __attribute__ ((nonnull (1)));
API ALLOC char* ncplane_name(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncplane_reparent(struct ncplane* n, struct ncplane* newparent)
  __attribute__ ((nonnull (1, 2)));
API struct ncplane* ncplane_reparent_family(struct ncplane* n, struct ncplane* newparent)
  __attribute__ ((nonnull (1, 2)));
API ALLOC struct ncplane* ncplane_dup(const struct ncplane* n, void* opaque)
  __attribute__ ((nonnull (1)));
API void ncplane_translate(const struct ncplane* src, const struct ncplane* dst,
                           int* RESTRICT y, int* RESTRICT x)
  __attribute__ ((nonnull (1)));
API bool ncplane_translate_abs(const struct ncplane* n, int* RESTRICT y, int* RESTRICT x)
  __attribute__ ((nonnull (1)));
API bool ncplane_set_scrolling(struct ncplane* n, unsigned scrollp)
  __attribute__ ((nonnull (1)));
API bool ncplane_scrolling_p(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API bool ncplane_set_autogrow(struct ncplane* n, unsigned growp)
  __attribute__ ((nonnull (1)));
API bool ncplane_autogrow_p(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
typedef struct ncpalette {
  uint32_t chans[NCPALETTESIZE]; 
} ncpalette;
API ALLOC ncpalette* ncpalette_new(struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API int ncpalette_use(struct notcurses* nc, const ncpalette* p)
  __attribute__ ((nonnull (1, 2)));
static inline int
ncpalette_set_rgb8(ncpalette* p, int idx, unsigned r, unsigned g, unsigned b){
  if(idx < 0 || (size_t)idx > sizeof(p->chans) / sizeof(*p->chans)){
    return -1;
  }
  return ncchannel_set_rgb8(&p->chans[idx], r, g, b);
}
static inline int
ncpalette_set(ncpalette* p, int idx, unsigned rgb){
  if(idx < 0 || (size_t)idx > sizeof(p->chans) / sizeof(*p->chans)){
    return -1;
  }
  return ncchannel_set(&p->chans[idx], rgb);
}
static inline int
ncpalette_get_rgb8(const ncpalette* p, int idx, unsigned* RESTRICT r, unsigned* RESTRICT g, unsigned* RESTRICT b){
  if(idx < 0 || (size_t)idx > sizeof(p->chans) / sizeof(*p->chans)){
    return -1;
  }
  return ncchannel_rgb8(p->chans[idx], r, g, b);
}
API void ncpalette_free(ncpalette* p);
typedef struct nccapabilities {
  unsigned colors;        
  bool utf8;              
  bool rgb;               
  bool can_change_colors; 
  bool halfblocks;
  bool quadrants; 
  bool sextants;  
  bool braille;   
} nccapabilities;
API uint16_t notcurses_supported_styles(const struct notcurses* nc)
  __attribute__ ((nonnull (1))) __attribute__ ((pure));
API unsigned notcurses_palette_size(const struct notcurses* nc)
  __attribute__ ((nonnull (1))) __attribute__ ((pure));
ALLOC API char* notcurses_detected_terminal(const struct notcurses* nc)
  __attribute__ ((nonnull (1)));
API const nccapabilities* notcurses_capabilities(const struct notcurses* n)
  __attribute__ ((nonnull (1)));
typedef enum {
  NCPIXEL_NONE = 0,
  NCPIXEL_SIXEL,           
  NCPIXEL_LINUXFB,         
  NCPIXEL_ITERM2,          
  NCPIXEL_KITTY_STATIC,
  NCPIXEL_KITTY_ANIMATED,
  NCPIXEL_KITTY_SELFREF,
} ncpixelimpl_e;
API ncpixelimpl_e notcurses_check_pixel_support(const struct notcurses* nc)
  __attribute__ ((nonnull (1))) __attribute__ ((pure));
__attribute__ ((nonnull (1))) __attribute__ ((pure)) static inline bool
nccapability_canchangecolor(const nccapabilities* caps){
  if(!caps->can_change_colors){
    return false;
  }
  ncpalette* p;
  if(caps->colors < sizeof(p->chans) / sizeof(*p->chans)){
    return false;
  }
  return true;
}
__attribute__ ((nonnull (1))) __attribute__ ((pure)) static inline bool
notcurses_cantruecolor(const struct notcurses* nc){
  return notcurses_capabilities(nc)->rgb;
}
__attribute__ ((nonnull (1))) __attribute__ ((pure)) static inline bool
notcurses_canchangecolor(const struct notcurses* nc){
  return nccapability_canchangecolor(notcurses_capabilities(nc));
}
__attribute__ ((nonnull (1))) __attribute__ ((pure)) static inline bool
notcurses_canfade(const struct notcurses* n){
  return notcurses_canchangecolor(n) || notcurses_cantruecolor(n);
}
API bool notcurses_canopen_images(const struct notcurses* nc)
  __attribute__ ((pure));
API bool notcurses_canopen_videos(const struct notcurses* nc)
  __attribute__ ((pure));