lib/LibNotcurses.jl


struct notcurses_options
    termtype::Ptr{Cchar}
    loglevel::ncloglevel_e
    margin_t::Cuint
    margin_r::Cuint
    margin_b::Cuint
    margin_l::Cuint
    flags::UInt64
end

function notcurses_lex_margins(op, opts)
    @ccall libnotcurses.notcurses_lex_margins(op::Ptr{Cchar}, opts::Ptr{notcurses_options})::Cint
end

function notcurses_lex_blitter(op, blitter)
    @ccall libnotcurses.notcurses_lex_blitter(op::Ptr{Cchar}, blitter::Ptr{ncblitter_e})::Cint
end

function notcurses_str_blitter(blitter)
    @ccall libnotcurses.notcurses_str_blitter(blitter::ncblitter_e)::Ptr{Cchar}
end

function notcurses_lex_scalemode(op, scalemode)
    @ccall libnotcurses.notcurses_lex_scalemode(op::Ptr{Cchar}, scalemode::Ptr{ncscale_e})::Cint
end

function notcurses_str_scalemode(scalemode)
    @ccall libnotcurses.notcurses_str_scalemode(scalemode::ncscale_e)::Ptr{Cchar}
end

function notcurses_init(opts, fp)
    @ccall libnotcurses.notcurses_init(opts::Ptr{notcurses_options}, fp::Ptr{Libc.FILE})::Ptr{notcurses}
end

function notcurses_core_init(opts, fp)
    @ccall libnotcurses.notcurses_core_init(opts::Ptr{notcurses_options}, fp::Ptr{Libc.FILE})::Ptr{notcurses}
end

function notcurses_stop(nc)
    @ccall libnotcurses.notcurses_stop(nc::Ptr{notcurses})::Cint
end

function notcurses_enter_alternate_screen(nc)
    @ccall libnotcurses.notcurses_enter_alternate_screen(nc::Ptr{notcurses})::Cint
end

function notcurses_leave_alternate_screen(nc)
    @ccall libnotcurses.notcurses_leave_alternate_screen(nc::Ptr{notcurses})::Cint
end

function notcurses_stdplane(nc)
    @ccall libnotcurses.notcurses_stdplane(nc::Ptr{notcurses})::Ptr{ncplane}
end

function notcurses_stdplane_const(nc)
    @ccall libnotcurses.notcurses_stdplane_const(nc::Ptr{notcurses})::Ptr{ncplane}
end

function ncpile_top(n)
    @ccall libnotcurses.ncpile_top(n::Ptr{ncplane})::Ptr{ncplane}
end

function ncpile_bottom(n)
    @ccall libnotcurses.ncpile_bottom(n::Ptr{ncplane})::Ptr{ncplane}
end

function notcurses_top(n)
    @ccall libnotcurses.notcurses_top(n::Ptr{notcurses})::Ptr{ncplane}
end

function notcurses_bottom(n)
    @ccall libnotcurses.notcurses_bottom(n::Ptr{notcurses})::Ptr{ncplane}
end

function ncpile_render(n)
    @ccall libnotcurses.ncpile_render(n::Ptr{ncplane})::Cint
end

function ncpile_rasterize(n)
    @ccall libnotcurses.ncpile_rasterize(n::Ptr{ncplane})::Cint
end

function notcurses_render(nc)
    @ccall libnotcurses.notcurses_render(nc::Ptr{notcurses})::Cint
end

function ncpile_render_to_buffer(p, buf, buflen)
    @ccall libnotcurses.ncpile_render_to_buffer(p::Ptr{ncplane}, buf::Ptr{Ptr{Cchar}}, buflen::Ptr{Csize_t})::Cint
end

function ncpile_render_to_file(p, fp)
    @ccall libnotcurses.ncpile_render_to_file(p::Ptr{ncplane}, fp::Ptr{Libc.FILE})::Cint
end

function notcurses_drop_planes(nc)
    @ccall libnotcurses.notcurses_drop_planes(nc::Ptr{notcurses})::Cvoid
end

function nckey_mouse_p(r)
    @ccall libnotcurses.nckey_mouse_p(r::UInt32)::Bool
end

struct ncinput
    data::NTuple{32, UInt8}
end

function Base.getproperty(x::Ptr{ncinput}, f::Symbol)
    f === :id && return Ptr{UInt32}(x + 0)
    f === :y && return Ptr{Cint}(x + 4)
    f === :x && return Ptr{Cint}(x + 8)
    f === :utf8 && return Ptr{NTuple{5, Cchar}}(x + 12)
    f === :alt && return Ptr{Bool}(x + 17)
    f === :shift && return Ptr{Bool}(x + 18)
    f === :ctrl && return Ptr{Bool}(x + 19)
    f === :evtype && return Ptr{Cvoid}(x + 20)
    f === :ypx && return Ptr{Cint}(x + 24)
    f === :xpx && return Ptr{Cint}(x + 28)
    return getfield(x, f)
end

function Base.getproperty(x::ncinput, f::Symbol)
    r = Ref{ncinput}(x)
    ptr = Base.unsafe_convert(Ptr{ncinput}, r)
    fptr = getproperty(ptr, f)
    GC.@preserve r unsafe_load(fptr)
end

function Base.setproperty!(x::Ptr{ncinput}, f::Symbol, v)
    unsafe_store!(getproperty(x, f), v)
end

function ncinput_equal_p(n1, n2)
    @ccall libnotcurses.ncinput_equal_p(n1::Ptr{ncinput}, n2::Ptr{ncinput})::Bool
end

function notcurses_get(n, ts, ni)
    @ccall libnotcurses.notcurses_get(n::Ptr{notcurses}, ts::Ptr{Cvoid}, ni::Ptr{ncinput})::UInt32
end

function notcurses_getvec(n, ts, ni, vcount)
    @ccall libnotcurses.notcurses_getvec(n::Ptr{notcurses}, ts::Ptr{Cvoid}, ni::Ptr{ncinput}, vcount::Cint)::Cint
end

function notcurses_inputready_fd(n)
    @ccall libnotcurses.notcurses_inputready_fd(n::Ptr{notcurses})::Cint
end

function notcurses_get_nblock(n, ni)
    @ccall libnotcurses.notcurses_get_nblock(n::Ptr{notcurses}, ni::Ptr{ncinput})::UInt32
end

function notcurses_get_blocking(n, ni)
    @ccall libnotcurses.notcurses_get_blocking(n::Ptr{notcurses}, ni::Ptr{ncinput})::UInt32
end

function ncinput_nomod_p(ni)
    @ccall libnotcurses.ncinput_nomod_p(ni::Ptr{ncinput})::Bool
end

function notcurses_mice_enable(n, eventmask)
    @ccall libnotcurses.notcurses_mice_enable(n::Ptr{notcurses}, eventmask::Cuint)::Cint
end

function notcurses_mice_disable(n)
    @ccall libnotcurses.notcurses_mice_disable(n::Ptr{notcurses})::Cint
end

function notcurses_linesigs_disable(n)
    @ccall libnotcurses.notcurses_linesigs_disable(n::Ptr{notcurses})::Cint
end

function notcurses_linesigs_enable(n)
    @ccall libnotcurses.notcurses_linesigs_enable(n::Ptr{notcurses})::Cint
end

function notcurses_refresh(n, y, x)
    @ccall libnotcurses.notcurses_refresh(n::Ptr{notcurses}, y::Ptr{Cuint}, x::Ptr{Cuint})::Cint
end

function ncplane_notcurses(n)
    @ccall libnotcurses.ncplane_notcurses(n::Ptr{ncplane})::Ptr{notcurses}
end

function ncplane_notcurses_const(n)
    @ccall libnotcurses.ncplane_notcurses_const(n::Ptr{ncplane})::Ptr{notcurses}
end

function ncplane_dim_yx(n, y, x)
    @ccall libnotcurses.ncplane_dim_yx(n::Ptr{ncplane}, y::Ptr{Cuint}, x::Ptr{Cuint})::Cvoid
end

function notcurses_stddim_yx(nc, y, x)
    @ccall libnotcurses.notcurses_stddim_yx(nc::Ptr{notcurses}, y::Ptr{Cuint}, x::Ptr{Cuint})::Ptr{ncplane}
end

function notcurses_stddim_yx_const(nc, y, x)
    @ccall libnotcurses.notcurses_stddim_yx_const(nc::Ptr{notcurses}, y::Ptr{Cuint}, x::Ptr{Cuint})::Ptr{ncplane}
end

function ncplane_dim_y(n)
    @ccall libnotcurses.ncplane_dim_y(n::Ptr{ncplane})::Cuint
end

function ncplane_dim_x(n)
    @ccall libnotcurses.ncplane_dim_x(n::Ptr{ncplane})::Cuint
end

function ncplane_pixel_geom(n, pxy, pxx, celldimy, celldimx, maxbmapy, maxbmapx)
    @ccall libnotcurses.ncplane_pixel_geom(n::Ptr{ncplane}, pxy::Ptr{Cuint}, pxx::Ptr{Cuint}, celldimy::Ptr{Cuint}, celldimx::Ptr{Cuint}, maxbmapy::Ptr{Cuint}, maxbmapx::Ptr{Cuint})::Cvoid
end

function notcurses_term_dim_yx(n, rows, cols)
    @ccall libnotcurses.notcurses_term_dim_yx(n::Ptr{notcurses}, rows::Ptr{Cuint}, cols::Ptr{Cuint})::Cvoid
end

function notcurses_at_yx(nc, yoff, xoff, stylemask, channels)
    @ccall libnotcurses.notcurses_at_yx(nc::Ptr{notcurses}, yoff::Cuint, xoff::Cuint, stylemask::Ptr{UInt16}, channels::Ptr{UInt64})::Ptr{Cchar}
end

struct ncplane_options
    y::Cint
    x::Cint
    rows::Cuint
    cols::Cuint
    userptr::Ptr{Cvoid}
    name::Ptr{Cchar}
    resizecb::Ptr{Cvoid}
    flags::UInt64
    margin_b::Cuint
    margin_r::Cuint
end

function ncplane_create(n, nopts)
    @ccall libnotcurses.ncplane_create(n::Ptr{ncplane}, nopts::Ptr{ncplane_options})::Ptr{ncplane}
end

function ncpile_create(nc, nopts)
    @ccall libnotcurses.ncpile_create(nc::Ptr{notcurses}, nopts::Ptr{ncplane_options})::Ptr{ncplane}
end

function ncplane_resize_maximize(n)
    @ccall libnotcurses.ncplane_resize_maximize(n::Ptr{ncplane})::Cint
end

function ncplane_resize_marginalized(n)
    @ccall libnotcurses.ncplane_resize_marginalized(n::Ptr{ncplane})::Cint
end

function ncplane_resize_realign(n)
    @ccall libnotcurses.ncplane_resize_realign(n::Ptr{ncplane})::Cint
end

function ncplane_resize_placewithin(n)
    @ccall libnotcurses.ncplane_resize_placewithin(n::Ptr{ncplane})::Cint
end

function ncplane_set_resizecb(n, resizecb)
    @ccall libnotcurses.ncplane_set_resizecb(n::Ptr{ncplane}, resizecb::Ptr{Cvoid})::Cvoid
end

function ncplane_set_name(n, name)
    @ccall libnotcurses.ncplane_set_name(n::Ptr{ncplane}, name::Ptr{Cchar})::Cint
end

function ncplane_name(n)
    @ccall libnotcurses.ncplane_name(n::Ptr{ncplane})::Ptr{Cchar}
end

function ncplane_reparent(n, newparent)
    @ccall libnotcurses.ncplane_reparent(n::Ptr{ncplane}, newparent::Ptr{ncplane})::Ptr{ncplane}
end

function ncplane_reparent_family(n, newparent)
    @ccall libnotcurses.ncplane_reparent_family(n::Ptr{ncplane}, newparent::Ptr{ncplane})::Ptr{ncplane}
end

function ncplane_dup(n, opaque)
    @ccall libnotcurses.ncplane_dup(n::Ptr{ncplane}, opaque::Ptr{Cvoid})::Ptr{ncplane}
end

function ncplane_translate(src, dst, y, x)
    @ccall libnotcurses.ncplane_translate(src::Ptr{ncplane}, dst::Ptr{ncplane}, y::Ptr{Cint}, x::Ptr{Cint})::Cvoid
end

function ncplane_translate_abs(n, y, x)
    @ccall libnotcurses.ncplane_translate_abs(n::Ptr{ncplane}, y::Ptr{Cint}, x::Ptr{Cint})::Bool
end

function ncplane_set_scrolling(n, scrollp)
    @ccall libnotcurses.ncplane_set_scrolling(n::Ptr{ncplane}, scrollp::Cuint)::Bool
end

function ncplane_scrolling_p(n)
    @ccall libnotcurses.ncplane_scrolling_p(n::Ptr{ncplane})::Bool
end

function ncplane_set_autogrow(n, growp)
    @ccall libnotcurses.ncplane_set_autogrow(n::Ptr{ncplane}, growp::Cuint)::Bool
end

function ncplane_autogrow_p(n)
    @ccall libnotcurses.ncplane_autogrow_p(n::Ptr{ncplane})::Bool
end

struct ncpalette
    chans::NTuple{256, UInt32}
end

function ncpalette_new(nc)
    @ccall libnotcurses.ncpalette_new(nc::Ptr{notcurses})::Ptr{ncpalette}
end

function ncpalette_use(nc, p)
    @ccall libnotcurses.ncpalette_use(nc::Ptr{notcurses}, p::Ptr{ncpalette})::Cint
end

function ncpalette_set_rgb8(p, idx, r, g, b)
    @ccall libnotcurses.ncpalette_set_rgb8(p::Ptr{ncpalette}, idx::Cint, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function ncpalette_set(p, idx, rgb)
    @ccall libnotcurses.ncpalette_set(p::Ptr{ncpalette}, idx::Cint, rgb::Cuint)::Cint
end

function ncpalette_get_rgb8(p, idx, r, g, b)
    @ccall libnotcurses.ncpalette_get_rgb8(p::Ptr{ncpalette}, idx::Cint, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::Cint
end

function ncpalette_free(p)
    @ccall libnotcurses.ncpalette_free(p::Ptr{ncpalette})::Cvoid
end

struct nccapabilities
    colors::Cuint
    utf8::Bool
    rgb::Bool
    can_change_colors::Bool
    halfblocks::Bool
    quadrants::Bool
    sextants::Bool
    braille::Bool
end

function notcurses_supported_styles(nc)
    @ccall libnotcurses.notcurses_supported_styles(nc::Ptr{notcurses})::UInt16
end

function notcurses_palette_size(nc)
    @ccall libnotcurses.notcurses_palette_size(nc::Ptr{notcurses})::Cuint
end

function notcurses_detected_terminal(nc)
    @ccall libnotcurses.notcurses_detected_terminal(nc::Ptr{notcurses})::Ptr{Cchar}
end

function notcurses_capabilities(n)
    @ccall libnotcurses.notcurses_capabilities(n::Ptr{notcurses})::Ptr{nccapabilities}
end

@cenum ncpixelimpl_e::UInt32 begin
    NCPIXEL_NONE = 0
    NCPIXEL_SIXEL = 1
    NCPIXEL_LINUXFB = 2
    NCPIXEL_ITERM2 = 3
    NCPIXEL_KITTY_STATIC = 4
    NCPIXEL_KITTY_ANIMATED = 5
    NCPIXEL_KITTY_SELFREF = 6
end

function notcurses_check_pixel_support(nc)
    @ccall libnotcurses.notcurses_check_pixel_support(nc::Ptr{notcurses})::ncpixelimpl_e
end

function nccapability_canchangecolor(caps)
    @ccall libnotcurses.nccapability_canchangecolor(caps::Ptr{nccapabilities})::Bool
end

function notcurses_cantruecolor(nc)
    @ccall libnotcurses.notcurses_cantruecolor(nc::Ptr{notcurses})::Bool
end

function notcurses_canchangecolor(nc)
    @ccall libnotcurses.notcurses_canchangecolor(nc::Ptr{notcurses})::Bool
end

function notcurses_canfade(n)
    @ccall libnotcurses.notcurses_canfade(n::Ptr{notcurses})::Bool
end

function notcurses_canopen_images(nc)
    @ccall libnotcurses.notcurses_canopen_images(nc::Ptr{notcurses})::Bool
end

function notcurses_canopen_videos(nc)
    @ccall libnotcurses.notcurses_canopen_videos(nc::Ptr{notcurses})::Bool
end
